syntax = "proto3";

package books;

import "google/protobuf/empty.proto";

option go_package = ".;booksapi";

message Book {
	string title = 1;
	repeated string authors = 2;
}

message Author {
	string author = 1;
}

message ListBooks {
	repeated Book books = 1;
}

message Title {
	string title = 1;
}

service BookService {
	rpc CreateBook (Book) returns (google.protobuf.Empty) {}
	rpc GetBookByTitle(Title) returns (Book) {}
	rpc ListBooksByAuthor(Author) returns (ListBooks) {}
	rpc ListAllBooks(google.protobuf.Empty) returns (ListBooks) {}
}
